[gd_scene load_steps=9 format=3 uid="uid://c84uq8wymhnxs"]

[ext_resource type="Script" path="res://Assets/Port v2/GB_port_2.gd" id="1_wmcjx"]
[ext_resource type="Texture2D" uid="uid://dr8kif3xk2ef" path="res://Assets/Opdelt porte/greenapple_port_h.png" id="2_ub4l3"]
[ext_resource type="Texture2D" uid="uid://fob3ttumi237" path="res://Assets/Opdelt porte/greenapple_port_v.png" id="3_hjttt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yhw3b"]
size = Vector2(67, 20)

[sub_resource type="Animation" id="Animation_m65g7"]
resource_name = "GB_port_open_2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GB_h_2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(17, 0), Vector2(33, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GB_v_2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-13, 0), Vector2(-33, 0)]
}

[sub_resource type="Animation" id="Animation_pti8t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GB_h_2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(17, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GB_v_2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-13, 0)]
}

[sub_resource type="Animation" id="Animation_1kyil"]
resource_name = "GB_port_close_2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GB_h_2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(33, 0), Vector2(17, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GB_v_2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-33, 0), Vector2(-13, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2ugqr"]
_data = {
"GB_port_close_2": SubResource("Animation_1kyil"),
"GB_port_open_2": SubResource("Animation_m65g7"),
"RESET": SubResource("Animation_pti8t")
}

[node name="GB_port_2" type="StaticBody2D"]
script = ExtResource("1_wmcjx")

[node name="GB_h_2" type="Sprite2D" parent="."]
position = Vector2(17, 0)
texture = ExtResource("2_ub4l3")

[node name="GB_v_2" type="Sprite2D" parent="."]
position = Vector2(-13, 0)
texture = ExtResource("3_hjttt")

[node name="GB_port_collision_2" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_yhw3b")

[node name="ap_GB_2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2ugqr")
}
